# pyweb-hw-08

./: .gitignore  README.md  pyproject.toml
configs/: config.ini
pyweb_hw_08/: main.py  models.py  seed.py
src/: consumer.py  consumer_email.py  consumer_sms.py  main.py  models.py  producer.py  seed.py
tests/: system_path.py  test_find_by_authors.py  test_find_by_tag.py  test_main.py  test_seed.py
