[tool.poetry]
name = "pyweb-hw-08"
version = "0.1.0"
description = "GoIT PythonWeb Homework-08"
authors = ["Spica12 <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.27.0"
configparser = "^6.0.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pytest = "^7.4.3"
pika = "^1.3.2"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
